[tool.poetry]
name = "intuno-sdk"
version = "0.1.0"
description = "The official Python SDK for the Intuno Agent Network."
authors = ["Alquify Inc. <hello@alquify.com>"]
readme = "README.md"
packages = [{include = "intuno_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
pydantic = "^2.7.1"

[tool.poetry.extras]
langchain = ["langchain-core>=0.1.52,<0.2.0"]
openai = ["openai>=1.23.6,<2.0.0"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
