[tool.poetry]
name = "intuno-sdk"
version = "0.5.0"
description = "The official Python SDK for the Intuno Agent Network."
authors = ["Alquify Inc. <hello@alquify.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://intuno.ai"
repository = "https://github.com/IntunoAI/intuno-sdk"
keywords = ["mcp", "ai-agents", "model-context-protocol", "intuno", "agent-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
packages = [{include = "intuno_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.27.0"
pydantic = "^2.7.1"
langchain-core = {version = ">=0.1.52", optional = true}
openai = {version = ">=1.23.6,<2.0.0", optional = true}
mcp = {version = ">=1.20", optional = true}
anthropic = {version = ">=0.34.0", optional = true}

[tool.poetry.scripts]
intuno-mcp = "intuno_sdk.mcp_server:main"

[tool.poetry.extras]
langchain = ["langchain-core"]
openai = ["openai"]
mcp = ["mcp"]
anthropic = ["anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
